--- a/final-pjt-front/index.html
+++ b/final-pjt-front/index.html
@@ -5,9 +5,18 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
-    
+  <style>
+  body {
+    width: 100%;
+    height: 100%;;
+    margin: 0;
+    padding: 0;
+  }
+  </style>
+  
+
   </head>
-  <body>
+  <body style="background-color: rgb(30, 30, 30);">
     <div id="app"></div>
     <!-- 카카오 로그인 API용 -->
     <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.1/kakao.min.js" integrity="sha384-kDljxUXHaJ9xAb2AzRd59KxjrFjzHa5TAoFQ6GbYTCAG0bjM55XohjjDT7tDDC01" crossorigin="anonymous"></script>
