--- a/final-pjt-front/index.html
+++ b/final-pjt-front/index.html
@@ -7,8 +7,8 @@
     <title>Vite App</title>
   <style>
   body {
-    width: 100%;
-    height: 100%;;
+    width: 100vw;
+    height: 100vh;;
     margin: 0;
     padding: 0;
   }
@@ -16,7 +16,7 @@
   
 
   </head>
-  <body style="background-color: rgb(30, 30, 30);">
+  <body style="background-color: rgb(255, 255, 255);">
     <div id="app"></div>
     <!-- 카카오 로그인 API용 -->
     <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.1/kakao.min.js" integrity="sha384-kDljxUXHaJ9xAb2AzRd59KxjrFjzHa5TAoFQ6GbYTCAG0bjM55XohjjDT7tDDC01" crossorigin="anonymous"></script>
