--- a/final-pjt-front/index.html
+++ b/final-pjt-front/index.html
@@ -4,20 +4,18 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  <style>
-  body {
-    width: 100vw;
-    height: 100vh;;
-    margin: 0;
-    padding: 0;
-  }
-  </style>
-  
-
+    <title>MarshMovie</title>
+    <link rel="icon" href="@/assets/favicon.png" sizes="16x16" type="image/png">
   </head>
   <body style="background-color: rgb(255, 255, 255);">
     <div id="app"></div>
+
+
+    <!-- <footer>
+      © 2024 MarchMovie. All rights reserved.
+      광주 2반 박동민, 박보람
+  </footer> -->
+
     <!-- 카카오 로그인 API용 -->
     <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.1/kakao.min.js" integrity="sha384-kDljxUXHaJ9xAb2AzRd59KxjrFjzHa5TAoFQ6GbYTCAG0bjM55XohjjDT7tDDC01" crossorigin="anonymous"></script>
     <script type="module" src="/src/main.js"></script>
